<?xml version="1.0"?>
<package format="3">
  <name>gundam_rx78_description</name>
  <version>0.0.4</version>
  <description>GUNDAM RX-78 URDF model package for ROS 2</description>

  <maintainer email="kei.okada@gmail.com">Kei Okada</maintainer>
  <author>Association GUNDAM GLOBAL CHALLENGE</author>
  <author email="kei.okada@gmail.com">Kei Okada</author>
  <author email="hiraoka@jsk.imi.i.u-tokyo.ac.jp">Naoki Hiraoka</author>

  <license>TERMS OF USE FOR GUNDAM RESEARCH OPEN SIMULATOR Attribution-NonCommercial-ShareAlike</license>
  <license>BSD</license>

  <url type="website">http://wiki.ros.org/gundam_rx78_description</url>

  <!-- Build tool -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Runtime dependencies -->
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>

  <!-- Optional: Add test dependencies if you intend to add tests -->
  <!-- <test_depend>ament_lint_auto</test_depend> -->
  <!-- <test_depend>ament_lint_common</test_depend> -->

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
